fix the deprecated and removal api